Use OidcProvider in REST API
