# top/api/main.py
@@ -15,12 +15,12 @@
 
 """Module containing the main FastAPI router and API endpoints."""
 
-from fastapi import FastAPI, HTTPException, Security, status
+from fastapi import FastAPI, HTTPException, Response, Security, status
 from fastapi.security import HTTPAuthorizationCredentials, HTTPBearer
 from ghga_service_commons.api import configure_app
 
 from ..config import CONFIG
-from ..core.models import UserInfo
+from ..core.models import LoginInfo, UserInfo
 from ..core.oidc_provider import OidcProvider
 
 app = FastAPI()
@@ -42,11 +42,49 @@ async def health():
     return {"status": "OK"}
 
 
+@app.post(
+    "/login",
+    summary="Log in as a test user",
+    tags=tags,  # pyright: ignore
+    status_code=status.HTTP_201_CREATED,
+    responses={
+        status.HTTP_201_CREATED: {
+            "model": str,
+            "description": "Access token has been created.",
+        },
+        status.HTTP_422_UNPROCESSABLE_ENTITY: {
+            "description": "Validation error in submitted data."
+        },
+    },
+)
+async def login(login_info: LoginInfo) -> Response:
+    """The UserInfo endpoint of the test OP."""
+    try:
+        token = oidc_provider.login(login_info)
+    except (TypeError, ValueError) as error:
+        raise HTTPException(
+            status_code=status.HTTP_422_UNPROCESSABLE_ENTITY,
+        ) from error
+    return Response(
+        content=token, media_type="application/jwt", status_code=status.HTTP_201_CREATED
+    )
+
+
 @app.get(
     "/userinfo",
     summary="Get user information",
     tags=tags,  # pyright: ignore
-    status_code=200,
+    status_code=status.HTTP_200_OK,
+    responses={
+        status.HTTP_200_OK: {
+            "model": UserInfo,
+            "description": "User info has been fetched.",
+        },
+        status.HTTP_403_FORBIDDEN: {"description": "Not authorized to get user info."},
+        status.HTTP_422_UNPROCESSABLE_ENTITY: {
+            "description": "Validation error in submitted data."
+        },
+    },
 )
 async def get_userinfo(
     credentials: HTTPAuthorizationCredentials = Security(HTTPBearer()),
@@ -54,7 +92,7 @@ async def get_userinfo(
     """The UserInfo endpoint of the test OP."""
     token = credentials.credentials
     try:
-        return oidc_provider.get_user_info(token)
+        return oidc_provider.user_info(token)
     except KeyError as error:
         raise HTTPException(
             status_code=status.HTTP_403_FORBIDDEN,
